--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
-.header {
+#header {
     position: fixed;
+    top: 0px;
+}
+
+.flexbox {
+    display: flex; 
+}
+
+.col {
+    margin: 20px;
+    background: darkgray;
+    
 }
