--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #EEEEEE;
+}
+
 #header {
     position: fixed;
     top: 0px;
@@ -9,6 +13,15 @@
 
 .col {
     margin: 20px;
-    background: darkgray;
-    
+    border: black;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1%;
+    text-align: center;
+}
+
+.col h1 {
+    background-color: #DDDDDD;
+    top: 0%;
+    padding: 10% 25%;
 }
